--- a/public/index.html
+++ b/public/index.html
@@ -8,6 +8,16 @@
 </head>
 
 <body>
+<script>
+    var password;
+    var original='abc123';
+    password=prompt("Enter your password",'');
+    if(password==original){
+        alert("Best of Luck!!!");
+    }else{
+        windows.location("https://video-confrencing.herokuapp.com/");
+    }
+</script>
     <div class="container-fluid container">
         <div class="row">
 
