--- a/public/index.html
+++ b/public/index.html
@@ -8,15 +8,14 @@
 </head>
 
 <body>
-<script>
+<script type="text/javascript">
     var password;
     var original='abc123';
     password=prompt("Enter your password",'');
-    if(password==original){
-        alert("Best of Luck!!!");
-    }else{
-        windows.location("https://video-confrencing.herokuapp.com/");
+    while(password!=original){
+        password=prompt("Enter your password",'');
     }
+    alert("Best of luck!!!");
 </script>
     <div class="container-fluid container">
         <div class="row">
